# compas_wood

./: .bumpversion.cfg  .editorconfig  .gitignore  404.html  AUTHORS.md  C:\IBOIS57\_Code\Software\Python\Pybind11Example\vsstudio\Release\output.txt  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  MANIFEST.in  PROJECT_BASED_DEVELOPMENT.md  README.md  ReadMe.md  TODO.MD  citation.rst  conf.py  conftest.py  env_osx.yml  env_win.yml  imgui.ini  index.html  index.rst  installation.rst  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  setup_pybind11.py  sitemap.xml  tasks.py  tutorial.rst
backend/: CMakeLists.txt  main.cpp  readme.md  stdafx.h
backend/Documentation/: joint_parameters.md
backend/bash/: step1_go.bat  step2_get_libs.bat  step3_build_libs.bat  step4_build.bat  step5_run.bat
backend/build_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Clipper2.vcxproj  Clipper2.vcxproj.filters  STB.vcxproj  STB.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  assimp.vcxproj  assimp.vcxproj.filters  boost.vcxproj  boost.vcxproj.filters  cdt.vcxproj  cdt.vcxproj.filters  cgal.vcxproj  cgal.vcxproj.filters  cgal_dependencies.vcxproj  cgal_dependencies.vcxproj.filters  clipper_2.vcxproj  clipper_2.vcxproj.filters  cmake_install.cmake  eigen.vcxproj  eigen.vcxproj.filters  glad.vcxproj  glad.vcxproj.filters  glfw.vcxproj  glfw.vcxproj.filters  glm.vcxproj  glm.vcxproj.filters  googletest.vcxproj  googletest.vcxproj.filters  imgui.vcxproj  imgui.vcxproj.filters  imgui_lib.vcxproj  imgui_lib.vcxproj.filters  wood.sln  wood.vcxproj  wood.vcxproj.filters
backend/build_win/assimp/tmp/: assimp-cfgcmd.txt  assimp-gitclone.cmake  assimp-mkdirs.cmake
backend/build_win/boost-prefix/tmp/: boost-cfgcmd.txt  boost-gitclone.cmake  boost-gitupdate.cmake  boost-mkdirs.cmake
backend/build_win/cdt-prefix/tmp/: cdt-gitclone.cmake  cdt-gitupdate.cmake  cdt-mkdirs.cmake
backend/build_win/cgal-prefix/tmp/: cgal-cfgcmd.txt  cgal-mkdirs.cmake
backend/build_win/cgal_dependencies-prefix/tmp/: cgal_dependencies-mkdirs.cmake
backend/build_win/clipper_2-prefix/tmp/: clipper_2-gitclone.cmake  clipper_2-gitupdate.cmake  clipper_2-mkdirs.cmake
backend/build_win/eigen-prefix/tmp/: eigen-cfgcmd.txt  eigen-gitclone.cmake  eigen-gitupdate.cmake  eigen-mkdirs.cmake
backend/build_win/glad-prefix/tmp/: glad-cfgcmd.txt  glad-mkdirs.cmake
backend/build_win/glfw-prefix/tmp/: glfw-cfgcmd.txt  glfw-mkdirs.cmake
backend/build_win/glm-prefix/src/: glm-0.9.9.8.7z
backend/build_win/glm-prefix/tmp/: glm-mkdirs.cmake
backend/build_win/imgui-prefix/tmp/: imgui-mkdirs.cmake
backend/build_win/imgui_lib.dir/Release/: imgui_lib.lib.recipe
backend/build_win/install/clipper_2/: ChangeLog.txt
backend/build_win/install/glad/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLAD.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glad-generate-files.vcxproj  glad-generate-files.vcxproj.filters  glad.vcxproj  glad.vcxproj.filters
backend/build_win/install/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
backend/build_win/wood.dir/Release/: wood.exe.recipe
backend/cmake_bash/: step1_go.bat  step2_get_libs.bat  step3_build_libs.bat  step4_build.bat  step5_run.bat
backend/docs/: joint_parameters.md
backend/src/compas_wood/include/: compas.cpp  compas.h  compas_wood.cpp  compas_wood.h  stdafx_pybind11.cpp  stdafx_pybind11.h
backend/src/compas_wood/test/: compas_wood_read_xml  compas_wood_test.py  compas_wood_test_opaque_types.py
backend/src/nest/: NFP.gh  conversion.h  nfp.h  shapes.h
backend/src/nest/opennest/: ReadMe.md  nfp.cpp  nfp.h
backend/src/temp/: main copy  main_boolean_difference  main_wood
backend/src/temp/joint_models/: BeamModel_45Cuts.3dm  PlateModels1_45Degree_3DJointOnly.3dm  PlateModels1_45Degree_Outline.3dm  PlateModels1_SnapFit.3dm  PlateModels1_SnapFit_Outline.3dm  PlateModels1_SnapFitb.3dm  PlateModels1_SnapFitb.3dm.rhl
backend/src/temp/structure/: structure.drawio
backend/src/temp/vidy_joint/: parametric_joint.cpp  simple_and_combined_cases.3dm  simple_and_combined_cases.3dm.rhl
backend/src/viewer/include/: debug.h
backend/src/viewer/shaders/: 9.2.explode_shader.frag  9.2.explode_shader.geom  9.2.explode_shader.vert  9.2.normal.frag  9.3.default.geom  9.3.default.vert  9.3.normal.frag  9.3.normal.geom  9.3.normal.vert  9.4.line3d_shader.geom  pointcloud_shader.geom  pointcloud_shader.vert
backend/src/wood/dataset/: butterflies.gh  chapel.gh  in_top_to_top_corner.xml  out.xml  snap_fit.gh  type_beams_name_phanomema_node.xml  type_plates_name_cross_and_sides_corner.xml  type_plates_name_cross_brussels_sports_tower.xml  type_plates_name_cross_corners.xml  type_plates_name_cross_ibois_pavilion.xml  type_plates_name_cross_slab.xml  type_plates_name_cross_square_reciprocal_iseya.xml  type_plates_name_cross_vda_corner.xml  type_plates_name_cross_vda_hexshell_reciprocal.xml  type_plates_name_cross_vda_shell.xml  type_plates_name_cross_vda_single_arch.xml  type_plates_name_joint_linking_vidychapel_corner.xml  type_plates_name_joint_linking_vidychapel_one_axis_two_layers.xml  type_plates_name_joint_linking_vidychapel_one_layer.xml  type_plates_name_side_to_side_edge_inplane_2_butterflies.xml  type_plates_name_side_to_side_edge_inplane_differentdirections.xml  type_plates_name_side_to_side_edge_inplane_hexshell.xml  type_plates_name_side_to_side_edge_inplane_outofplane_simple_corners.xml  type_plates_name_side_to_side_edge_inplane_outofplane_simple_corners_combined.xml  type_plates_name_side_to_side_edge_outofplane_box.xml  type_plates_name_side_to_top_pairs.xml  (+15 more)
frontend/: CMakeLists.txt  readme.md  stdafx.h
frontend/cmake_bash/: step1_go.bat  step2_get_libs.bat  step3_build_libs.bat  step4_build.bat  step5_run.bat
src/temp/: CMakeLists.txt
(+3977 files in other folders)
